2008-09-23	Brian Tarricone <bjt23@cornell.edu>

	* po/POTFILES.in: add xfce4-autostart-editor/main.c.

2008-09-15	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-autostart-editor/main.c, 
	  xfce4-autostart-editor/xfae-window.{c,h},
	  xfce4-autostart-editor/xfce4-autostart-editor.desktop.in: Add 
	  embedding support to the autostart editor. I suppose there is a 
	  better way to do it with the existing code, but it works and it's
	  that much of a mess.

2008-09-14	Jannis Pohlmann <jannis@xfce.org>

	* settings/session/session.c, settings/splash/splash.c: Add embedding
	  support to the xfce4-session settings dialogs.
	* settings/session/xfce4-session-settings.desktop.in,
	  settings/splash/xfce4-splash-settings.desktop.in: Add X-XfcePluggable=true
		to both desktop files.

2008-09-04	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add git svn revision versioning support.

2008-08-25	Brian J. Tarricone <kelnos@xfce.org>

	* settings/session/{Makefile.am,xfce-session-settings.desktop.in},
	  settings/splash/{Makefile.am,xfce-splash-settings.desktop.in},
	  xfce4-autostart-editor/xfce4-autostart-editor.desktop.in: Include
	  settings dialogs in the new settings manager.

2007-11-29	Benedikt Meurer <benny@xfce.org>

	* icons/, xfce4-autostart-editor/main.c: Add icon from
	  Jozsef Mak <jozmak@gmail.com> for the autostart editor.
	  Bug #3215.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* engines/simple/simple.c: Fix dialog layout. Bug #3287.
	* engines/simple/fallback.h, engines/simple/preview.h: Shut up
	  gcc.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/xfce4-session.1: Apply patch from Alexander
	  Toresson <alexander.toresson@gmail.com> to fix typos in
	  the man page. Bug #3288.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* engines/balou/config.c, engines/simple/simple.c: Use
	  GtkFileChooser instead of XfceFileChooser. Bug #3492.

2007-07-20	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/shutdown.c: Fix typo. Bug #3381.