@@ -1,3 +1,10 @@
+2008-10-01	Brian Tarricone <bjt23@cornell.edu>
+
+	* xfce4-session/{xfsm-startup.[ch],xfsm-properties.h,xfsm-manager.[ch]}:
+	  Start all session clients in parallel within priority groups.
+	  There's still probably more work to be done here, but this is
+	  a good first cut, and seems to work well (bug 4312).
+
 2008-09-23	Brian Tarricone <bjt23@cornell.edu>
 
 	* po/POTFILES.in: add xfce4-autostart-editor/main.c.
